Complete side animated scrolling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <div class="box"><h2>Content here</h2></div>
     <div class="box"><h2>Content here</h2></div>
     <div class="box"><h2>Content here</h2></div>    
-
+    <!-- More divs can be added dynamically with JS -->
+    
     <script src="script.js"></script>
 </body>
 </html>
